beta.22 new alternate pagination ui

--- a/apps/mantine-react-table-docs/pages/changelog.mdx
+++ b/apps/mantine-react-table-docs/pages/changelog.mdx
@@ -14,6 +14,7 @@ import Head from 'next/head';
 
 #### V1.0.0-beta.22
 
+- New `mantinePaginationProps.variant` `"mantine"` to use Mantine's own Pagination component. (removed `showFirstLastPageButtons` in favor of `withEdges`)
 - Default `rowNumberMode` changed to `"static"`
 
 #### V1.0.0-beta.21
