--- a/apps/mantine-react-table-docs/pages/docs/guides/column-ordering-dnd.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/column-ordering-dnd.mdx
@@ -102,3 +102,5 @@ The ability for a column to have a drag and drop handle can be specified by sett
 <DNDExample />
 
 View Extra Storybook **[Examples](https://www.mantine-react-table.dev/?path=/story/features-column-ordering-examples)**
+
+> Note: Drag and Drop is not currently supported on mobile touch devices.
