--- a/apps/mantine-react-table-docs/pages/docs/guides/row-ordering-dnd.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/row-ordering-dnd.mdx
@@ -63,3 +63,5 @@ The Drag and Drop features are not limited to just internally within the same ta
 <EnableDraggingExample />
 
 View Extra Storybook **[Examples](https://www.mantine-react-table.dev/?path=/story/features-row-ordering-examples)**
+
+> Note: Drag and Drop is not currently supported on mobile touch devices.
