beta.23 new create row feature

--- a/apps/mantine-react-table-docs/pages/changelog.mdx
+++ b/apps/mantine-react-table-docs/pages/changelog.mdx
@@ -12,6 +12,11 @@ import Head from 'next/head';
 
 ### V1
 
+#### V1.0.0-beta.23
+
+- a bunch of create row features (still in progress)
+- renamed `MRT_FlexRender` to just `flexRender`
+
 #### V1.0.0-beta.22
 
 - New `mantinePaginationProps.variant` `"mantine"` to use Mantine's own Pagination component. (removed `showFirstLastPageButtons` in favor of `withEdges`)
@@ -45,7 +50,7 @@ import Head from 'next/head';
 
 #### V1.0.0-beta.17
 
-- exported new `MRT_FlexRender` function as a utility to help with custom headless ui renders
+- exported new `flexRender` function as a utility to help with custom headless ui renders
 
 #### V1.0.0-beta.16
 
