fix editing and creating modals not opening

--- a/apps/mantine-react-table-docs/pages/changelog.mdx
+++ b/apps/mantine-react-table-docs/pages/changelog.mdx
@@ -12,6 +12,10 @@ import Head from 'next/head';
 
 ### V1
 
+#### V1.0.0-beta.24
+
+- Fixed Edit and Create Row Modals not opening
+
 #### V1.0.0-beta.23
 
 - a bunch of create row features (still in progress)
