beta.25 create row feature polish

--- a/apps/mantine-react-table-docs/pages/changelog.mdx
+++ b/apps/mantine-react-table-docs/pages/changelog.mdx
@@ -12,6 +12,12 @@ import Head from 'next/head';
 
 ### V1
 
+#### V1.0.0-beta.25
+
+- Fixed "Toggle Full Screen" tooltip not hiding after clicking to toggle full screen
+- Solved a lot of create and edit mode bugs and edge cases
+- Allow simple `table.setCreatingRow(true)` to be called if no default values are needed for new row
+
 #### V1.0.0-beta.24
 
 - Fixed Edit and Create Row Modals not opening
