create multiple edit/create mode examples

--- a/apps/mantine-react-table-docs/pages/docs/examples/editing-crud-inline-row.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/examples/editing-crud-inline-row.mdx
@@ -2,14 +2,14 @@ import Head from 'next/head';
 import Examples from '../../../example-groups/EditingCRUD';
 
 <Head>
-  <title>Editing CRUD Example - Mantine React Table Docs</title>
+  <title>Editing CRUD Inline Row Example - Mantine React Table Docs</title>
   <meta
     name="description"
-    content="An example of Mantine React Table which shows how to use editing CRUD features"
+    content="An example of Mantine React Table which shows how to use editing CRUD Inline Row features"
   />
   <meta
     property="og:title"
-    content="Editing CRUD Mantine React Table Example"
+    content="Editing CRUD Inline Row Mantine React Table Example"
   />
   <meta
     property="og:description"
@@ -17,11 +17,11 @@ import Examples from '../../../example-groups/EditingCRUD';
   />
 </Head>
 
-## Editing (CRUD) Example
+## Editing (CRUD) Inline Row Example
 
 Full CRUD (Create, Read, Update, Delete) functionality can be easily implemented with Mantine React Table, with a combination of editing, toolbar, and row action features.
 
-This example below uses the default [`"modal"`](/docs/guides/editing#modal-editing-mode) editing mode, where a dialog opens up to edit 1 row at a time.
+This example below uses the inline [`"row"`](/docs/guides/editing#row-editing-mode) editing mode, which allows you to edit a single row at a time with built-in save and cancel buttons.
 
 Check out the other editing modes down below, and the [editing guide](/docs/guides/editing) for more information.
 
