--- a/apps/mantine-react-table-docs/pages/docs/examples/react-query.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/examples/react-query.mdx
@@ -1,5 +1,5 @@
 import Head from 'next/head';
-import Example from '../../../examples/react-query';
+import Examples from '../../../example-groups/RemoteFetching';
 
 <Head>
   <title>React Query Example - Mantine React Table Docs</title>
@@ -25,6 +25,6 @@ React Query [a.k.a TanStack Query](https://tanstack.com/query/latest) is a libra
 
 Also, be sure to check out the [Virtualized Example](/docs/examples/virtualized), which shows off the use of another TanStack library, TanStack React Virtual, to render thousands of rows at once while still maintaining great performance.
 
-<Example />
+<Examples />
 
 View Extra Storybook **[Examples](https://www.mantine-react-table.dev/?path=/story/prop-playground--default)**
