--- a/apps/mantine-react-table-docs/pages/docs/examples/remote.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/examples/remote.mdx
@@ -1,5 +1,5 @@
 import Head from 'next/head';
-import Example from '../../../examples/remote';
+import Example from '../../../example-groups/RemoteFetching';
 
 <Head>
   <title>Remote Data Fetching Example - Mantine React Table Docs</title>
