--- a/apps/mantine-react-table-docs/pages/docs/guides/column-filtering.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/column-filtering.mdx
@@ -31,19 +31,20 @@ Filtering is one of the most powerful features of Mantine React Table and is ena
       'enableFacetedValues',
       'enableFilterMatchHighlighting',
       'enableFilters',
+      'columnFilterDisplayMode',
       'filterFns',
       'filterFromLeafRows',
       'getFacetedMinMaxValues',
       'getFacetedRowModel',
       'getFacetedUniqueValues',
       'getFilteredRowModel',
-      'mantineHighlightProps',
       'mantineFilterAutocompleteProps',
       'mantineFilterCheckboxProps',
       'mantineFilterMultiSelectProps',
       'mantineFilterRangeProps',
       'mantineFilterSelectProps',
       'mantineFilterTextInputProps',
+      'mantineHighlightProps',
       'manualFiltering',
       'maxLeafRowFilterDepth',
       'onColumnFilterFnsChange',
