--- a/apps/mantine-react-table-docs/pages/docs/guides/editing.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/editing.mdx
@@ -26,8 +26,8 @@ There are 4 visually distinct editing modes to choose from, whether you want to 
 <TableOptionsTable
   onlyOptions={
     new Set([
-      'creatingMode',
-      'editingMode',
+      'createDisplayMode',
+      'editDisplayMode',
       'enableEditing',
       'mantineCreateRowModalProps',
       'mantineEditRowModalProps',
@@ -83,7 +83,7 @@ However, this is just the start. You will need to hook up logic and event listen
 
 ### Editing Modes
 
-Mantine React Table has 4 supported editing modes: `"modal"` (default), `"row"`, `"cell"` and `"table"`. You can specify which editing mode you want to use by passing the `editingMode` prop.
+Mantine React Table has 4 supported editing modes: `"modal"` (default), `"row"`, `"cell"` and `"table"`. You can specify which editing mode you want to use by passing the `editDisplayMode` prop.
 
 #### Modal Editing Mode
 
