--- a/apps/mantine-react-table-docs/pages/docs/guides/row-selection.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/row-selection.mdx
@@ -34,6 +34,7 @@ Mantine React Table has a built-in row-selection feature and makes it easy to ma
       'onRowSelectionChange',
       'positionToolbarAlertBanner',
       'selectAllMode',
+      'selectDisplayMode',
     ])
   }
 />
@@ -184,7 +185,7 @@ const table = useMantineReactTable({
 
 ### Alternate Switch and Radio Variants
 
-By default, the selection inputs are Mantine checkboxes, but you can use switch or radio buttons instead with the `mantineSelectCheckboxProps.variant` prop.
+By default, the selection inputs are Mantine checkboxes, but you can use switch or radio buttons instead with the `selectDisplayMode` table option.
 
 <EnableSwitchExample />
 
