enter key closes filter popover

--- a/apps/mantine-react-table-docs/pages/changelog.mdx
+++ b/apps/mantine-react-table-docs/pages/changelog.mdx
@@ -12,6 +12,10 @@ import Head from 'next/head';
 
 ### V1
 
+#### V1.0.0-beta.27
+
+- hitting `'enter'` key when filtering in popover display mode now closes the popover
+
 #### V1.0.0-beta.26
 
 - Renamed `creatingMode` table option to `createDisplayMode`
