package upgrades and more docs polish

--- a/apps/mantine-react-table-docs/pages/docs/guides/aggregation-and-grouping.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/aggregation-and-grouping.mdx
@@ -77,7 +77,13 @@ const columns = [
   },
 ];
 
-return <MantineReactTable columns={columns} data={data} enableGrouping />;
+const table = useMantineReactTable({
+  columns,
+  data,
+  enableGrouping: true, //enable grouping
+});
+
+return <MantineReactTable table={table} />;
 ```
 
 #### Hide Drag Buttons for Grouping
