--- a/apps/mantine-react-table-docs/pages/docs/guides/customize-components.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/customize-components.mdx
@@ -28,33 +28,44 @@ All props labeled `mantine...Props` get forwarded to Mantine components. Here is
 <TableOptionsTable
   onlyOptions={
     new Set([
+      'layoutMode',
       'mantineBottomToolbarProps',
+      'mantineColumnActionsButtonProps',
+      'mantineColumnDragHandleProps',
+      'mantineCopyButtonProps',
+      'mantineCreateRowModalProps',
+      'mantineDetailPanelProps',
+      'mantineEditRowModalProps',
+      'mantineEditSelectProps',
+      'mantineEditTextInputProps',
       'mantineExpandAllButtonProps',
       'mantineExpandButtonProps',
+      'mantineFilterAutocompleteProps',
+      'mantineFilterCheckboxProps',
+      'mantineFilterMultiSelectProps',
+      'mantineFilterRangeSliderProps',
+      'mantineFilterSelectProps',
+      'mantineFilterTextInputProps',
+      'mantineHighlightProps',
+      'mantineLoadingOverlayProps',
+      'mantinePaginationProps',
+      'mantinePaperProps',
       'mantineProgressProps',
+      'mantineRowDragHandleProps',
       'mantineSearchTextInputProps',
       'mantineSelectAllCheckboxProps',
       'mantineSelectCheckboxProps',
-      'mantineCopyButtonProps',
-      'mantineEditTextInputProps',
-      'mantineTableBodyCellProps',
       'mantineSkeletonProps',
+      'mantineTableBodyCellProps',
       'mantineTableBodyProps',
-      'mantineRowDragHandleProps',
       'mantineTableBodyRowProps',
       'mantineTableContainerProps',
-      'mantineDetailPanelProps',
       'mantineTableFooterCellProps',
       'mantineTableFooterProps',
       'mantineTableFooterRowProps',
-      'mantineColumnActionsButtonProps',
-      'mantineColumnDragHandleProps',
-      'mantineFilterTextInputProps',
       'mantineTableHeadCellProps',
       'mantineTableHeadProps',
       'mantineTableHeadRowProps',
-      'mantinePaginationProps',
-      'mantinePaperProps',
       'mantineTableProps',
       'mantineToolbarAlertBannerBadgeProps',
       'mantineToolbarAlertBannerProps',
@@ -70,12 +81,19 @@ Some of the column options expose the same props as above, but on a per column b
 <ColumnOptionsTable
   onlyOptions={
     new Set([
+      'mantineColumnActionsButtonProps',
+      'mantineColumnDragHandleProps',
       'mantineCopyButtonProps',
+      'mantineEditSelectProps',
       'mantineEditTextInputProps',
+      'mantineFilterAutocompleteProps',
+      'mantineFilterCheckboxProps',
+      'mantineFilterMultiSelectProps',
+      'mantineFilterRangeSliderProps',
+      'mantineFilterSelectProps',
+      'mantineFilterTextInputProps',
       'mantineTableBodyCellProps',
       'mantineTableFooterCellProps',
-      'mantineColumnActionsButtonProps',
-      'mantineFilterTextInputProps',
       'mantineTableHeadCellProps',
     ])
   }
