redesigned home page

--- a/apps/mantine-react-table-docs/pages/docs/examples/advanced.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/examples/advanced.mdx
@@ -1,5 +1,5 @@
 import Head from 'next/head';
-import Example from '../../../examples/advanced';
+import Examples from '../../../example-groups/BasicExamples';
 
 <Head>
   <title>Advanced Example - Mantine React Table Docs</title>
@@ -20,6 +20,6 @@ Here is a more advanced example showcasing Mantine React Table's many features. 
 
 This example is still only using client-side features. If you want to see an example of how to use Mantine React Table with server side logic and remote data, check out either the [Remote&nbsp;Data&nbsp;Example](/docs/examples/remote) or the [React-Query Example](/docs/examples/react-query).
 
-<Example />
+<Examples isPage />
 
 View Extra Storybook **[Examples](https://www.mantine-react-table.dev/?path=/story/prop-playground--maximum-features)**
