--- a/apps/mantine-react-table-docs/pages/docs/examples/basic.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/examples/basic.mdx
@@ -1,5 +1,5 @@
 import Head from 'next/head';
-import Example from '../../../examples/basic';
+import Examples from '../../../example-groups/BasicExamples';
 
 <Head>
   <title>Basic Example - Mantine React Table Docs</title>
@@ -18,6 +18,6 @@ import Example from '../../../examples/basic';
 
 Mantine React Table enables client-side sorting, filtering, search, pagination, column hiding, and more by default. These features can easily be disabled or customized further, but here is a showcase of their default behavior. Be sure to check out a more [Advanced Example](/docs/examples/advanced) to see how more features can be customized.
 
-<Example />
+<Examples isPage />
 
 View Extra Storybook **[Examples](https://www.mantine-react-table.dev/?path=/story/prop-playground--default)**
