--- a/apps/mantine-react-table-docs/pages/docs/examples/custom-headless.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/examples/custom-headless.mdx
@@ -1,5 +1,5 @@
 import Head from 'next/head';
-import Example from '../../../examples/custom-headless';
+import Examples from '../../../example-groups/BasicExamples';
 
 <Head>
   <title>Custom Headless Example - Mantine React Table Docs</title>
@@ -23,6 +23,6 @@ For advanced use cases where you want to be in 100% control of your UI component
 
 The power and flexibility here is almost limitless, as you can combine some already built-in Mantine React Table components alongside your own custom components. For the MRT components to work properly, all you need to do is pass the `table` object returned from the `useMantineReactTable` hook.
 
-<Example />
+<Examples isPage />
 
 View Extra Storybook **[Examples](https://www.mantine-react-table.dev/?path=/story/prop-playground--default)**
