--- a/apps/mantine-react-table-docs/pages/docs/examples/minimal.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/examples/minimal.mdx
@@ -1,5 +1,5 @@
 import Head from 'next/head';
-import Example from '../../../examples/minimal';
+import Examples from '../../../example-groups/BasicExamples';
 
 <Head>
   <title>Minimal Example - Mantine React Table Docs</title>
@@ -25,6 +25,6 @@ Every feature has an `enable...` prop that let's you turn it on or off.
 
 Also, you can choose to not import the entire `<MantineReactTable />` component and instead import a smaller sub-component like `<MRT_TableContainer />` or `<MRT_Table />`. These imports do not include all of the extra toolbar components and only include the React code for the table itself.
 
-<Example />
+<Examples isPage />
 
 View Extra Storybook **[Examples](https://www.mantine-react-table.dev/?path=/story/prop-playground--minimum-features)**
