--- a/apps/mantine-react-table-docs/pages/docs/examples/aggregation-and-grouping.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/examples/aggregation-and-grouping.mdx
@@ -1,5 +1,5 @@
 import Head from 'next/head';
-import Example from '../../../examples/aggregation-and-grouping';
+import Examples from '../../../example-groups/BasicExamples';
 
 <Head>
   <title>Aggregation and Grouping Example - Mantine React Table Docs</title>
@@ -25,6 +25,6 @@ You can group by a single column or multiple columns at a time. Then, you can ru
 
 The Grouping and Aggregation features work hand in hand with the Expanding and Sorting features. Try grouping by various columns in the example below and sorting by the aggregated columns, such as "age" or "salary".
 
-<Example />
+<Examples isPage />
 
 View Extra Storybook **[Examples](https://www.mantine-react-table.dev/?path=/story/features-aggregation-examples)**
